# COMP64101-Reasoning-and-Learning-under-Uncertainty-Module

Labs/: Lab_Prob&Stats.ipynb  Statistical_Inference_Lab.ipynb  comp64101_coursework_part1_a49626th.ipynb  comp64101_coursework_part2_a49626th.ipynb
Labs/.ipynb_checkpoints/: comp64101_coursework_part1_a49626th-checkpoint.ipynb
Labs/assignment2/: comp64101_coursework_part2_a49626th.ipynb  pyproject.toml
Labs/datasets_part_1/: coin_experiments.csv  log_reg_data.csv
